fixes mobile scrollbar

--- a/src/style.styl
+++ b/src/style.styl
@@ -477,27 +477,24 @@ a
         //     left 30%
     
 
+
 // Scrollbar
++desktop()
+    ::-webkit-scrollbar {
+        width: 15px;
+        right 10px
+    }
+    ::-webkit-scrollbar-track {
+    //   background: var(--bg-color)
+    }
 
-/* width */
-::-webkit-scrollbar {
-    width: 15px;
-    right 10px
+    /* Handle */
+    ::-webkit-scrollbar-thumb {
+        border-radius 20px
+        background: var(--scrollbar-color)
+    }
 
-}
-
-/* Track */
-::-webkit-scrollbar-track {
-  background: var(--bg-color)
-}
-
-/* Handle */
-::-webkit-scrollbar-thumb {
-    border-radius 20px
-    background: var(--scrollbar-color)
-}
-
-/* Handle on hover */
-::-webkit-scrollbar-thumb:hover {
-  background: #555;
-}
+    /* Handle on hover */
+    ::-webkit-scrollbar-thumb:hover {
+    background: #555;
+    }
